@@ -69,7 +69,7 @@
 		<SEQ TYPE="OPERATOR">}</SEQ>
 		<SEQ TYPE="OPERATOR">{</SEQ>
 		<MARK_PREVIOUS TYPE="LABEL" EXCLUDE_MATCH="TRUE"
-			AT_LINE_START="TRUE">:</MARK_PREVIOUS>
+			AT_WHITESPACE_END="TRUE">:</MARK_PREVIOUS>
 
 		<!-- Function calls -->
 		<MARK_PREVIOUS TYPE="FUNCTION" EXCLUDE_MATCH="TRUE">(</MARK_PREVIOUS>
